tests/fixtures/valid/with_sr_dat.py
"""Valid PyATB script with SR.dat reference."""

import pyatb  # noqa: F401

hr_file = "HR.dat"
sr_file = "SR.dat"
