tests/fixtures/invalid/missing_structure_ref.py
"""Invalid PyATB script - missing structure reference (PYATB-E074)."""

import pyatb  # noqa: F401

# No HR.dat, SR.dat, TightBinding, or TB reference
print("No structure reference")
